June 8, 2008
  Full autotools support in the subversion repository.
  That is, relacs should compile smoothly on your
  system provided running ./configure was successfull.
  Still, use this release as a demo only.
  
Mar 1, 2008
  The new web site goes online.

Aug 22, 2007: Version 0.9.0 - prerelease 
  Note that names of libraries and classes as well as class interfaces
  may still change. Also, no hardware support is shipped with this
  release. Use this release as a demo only and don't put any work into
  it. Wait for the first official release (we are working hard on
  this, but don't expect the official release available before spring
  2008).

  